--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,14 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-database-postgresql</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
@@ -148,6 +156,16 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<configuration>
+					<cleanDisabled>false</cleanDisabled>
+					<url>${env.PSQL_URL}</url>
+					<user>${env.PSQL_USERNAME}</user>
+					<password>${env.PSQL_PASSWORD}</password>
 				</configuration>
 			</plugin>
 		</plugins>
