--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,12 +2,9 @@ spring:
   application:
     name: lynx
   r2dbc:
-    url: ${PSQL_URL}
+    url: r2dbc:postgresql://localhost:5432/max_amps
     username: ${PSQL_USERNAME}
     password: ${PSQL_PASSWORD}
-  sql:
-    init:
-      mode: always
 
 tokens:
   account-access-token:
