--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,6 +5,17 @@ spring:
     url: r2dbc:postgresql://localhost:5432/max_amps
     username: ${PSQL_USERNAME}
     password: ${PSQL_PASSWORD}
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: jackbpiatt@gmail.com
+    password: ${EMAIL_APP_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
 tokens:
   account-access-token:
